package org.trishinfotech.responsibility;

public class PaperCurrency {
    protected int amount;
    public PaperCurrency(int amount) {
        super();
        this.amount = amount;
    }
    public int getAmount() {
        return amount;
    }
    public void setAmount(int amount) {
        this.amount = amount;
    }
}
